--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Qoutes</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    
+
+
+    <div class="main">
+        <div class="card">
+            <div class="card-head">
+                <q class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum nihil quae doloremque quasi
+                    vitae rerum, dolorem nostrum.
+                </q>
+            </div>
+            <div class="author-div">
+                <h4>Author Name : Adil Malik</h4>
+            </div>
+            <div class="card-footer">
+                <div class="button-div">
+                    <button id="next">Next</button>
+                    <button>Tweet</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script type="module" src="app.js"></script>
 </body>
+
 </html>
