--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <div class="main">
         <div class="card">
             <div class="card-head">
-                <q class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum nihil quae doloremque quasi
-                    vitae rerum, dolorem nostrum.
+                <q class="content">
                 </q>
             </div>
             <div class="author-div">
-                <h4>Author Name : Adil Malik</h4>
+                <h4 class="authorName"></h4>
             </div>
             <div class="card-footer">
                 <div class="button-div">
@@ -32,6 +31,7 @@
 
 
     <script type="module" src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
