--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <div class="main">
         <div class="card">
+            <div class="heading">
+                <h1>The day or quotes</h1>
+            </div>
             <div class="card-head">
                 <q class="content">
                 </q>
